--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -6,12 +6,23 @@
 
   .imgContainer {
     height: 113px;
+    position: relative;
     img {
       cursor: pointer;
       width: 100%;
       height: 100%;
       object-fit: cover;
       object-position: 0 0;
+    }
+    .videoContainer {
+      position: absolute;
+      top: 0;
+      width: 280px;
+      height: 113px;
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 
