--- a/src/containers/movieDetail/movieDetail.scss
+++ b/src/containers/movieDetail/movieDetail.scss
@@ -5,7 +5,7 @@
   .descriptionWrapper {
     display: flex;
     background-color: $color-black-0;
-    padding: 28px;
+    // padding-bottom: 28px;
     position: relative;
   }
 
@@ -60,6 +60,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
+    margin-bottom: 20px;
   }
 
   .backdropContainer {
@@ -83,6 +84,20 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(90deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
+  }
+
+  .trailerBtn {
+    font: inherit;
+    color: $color-white-0;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 20px;
+
+    &:hover,
+    &:active {
+      opacity: 0.7;
+    }
   }
 }
 
