added star rating and playing video on hover

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -13,6 +13,9 @@
   }
 
   input {
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
+    background-position: 96% 50%;
     font-family: inherit;
     font-size: 16px;
     font-weight: 400;
@@ -20,7 +23,7 @@
     color: $color-white-0;
     width: 376px;
     padding: 10px 10px 10px 8px;
-    background: rgba(255, 255, 255, 0.06);
+    background-color: rgba(255, 255, 255, 0.06);
     border: 1px solid rgba(255, 255, 255, 0.26);
     border-radius: 5px;
 
@@ -30,6 +33,14 @@
     &::placeholder {
       color: $color-white-0;
     }
+
+    &::-webkit-search-cancel-button {
+      -webkit-appearance: none;
+    }
+  }
+
+  .load {
+    background-image: url(../../assets/images/searchLoader.gif);
   }
 }
 
