--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -7,6 +7,8 @@
   .imgContainer {
     height: 113px;
     position: relative;
+    overflow: hidden;
+
     img {
       cursor: pointer;
       width: 100%;
@@ -18,11 +20,20 @@
       position: absolute;
       top: 0;
       width: 280px;
-      height: 113px;
+      height: 211px;
+
       iframe {
         width: 100%;
         height: 100%;
+        transform: translateY(-52px);
       }
+    }
+    .overlay {
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      position: absolute;
     }
   }
 
