--- a/src/containers/home/home.scss
+++ b/src/containers/home/home.scss
@@ -9,6 +9,9 @@
     display: flex;
     width: 100%;
     margin: 8px 0 56px 0;
+    height: 300px;
+    object-position: 50% 50%;
+    object-fit: cover;
   }
 
   .headingContainer {
