--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -11,16 +11,15 @@
   z-index: 5;
 }
 
-// .modalContainer {
-//   width: 500px;
-//   height: 500px;
-//   border-radius: 12px;
-//   background-color: white;
-//   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-//   display: flex;
-//   flex-direction: column;
-//   padding: 25px;
-// }
+.modalContainer {
+  width: 800px;
+  height: 450px;
+  margin: 0 20px;
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
 
 .closeBtn {
   text-align: right;
@@ -30,5 +29,12 @@
     border: none;
     font-size: 20px;
     cursor: pointer;
+  }
+}
+
+@media (max-width: 768px) {
+  .modalContainer {
+    width: 320px;
+    height: 170px;
   }
 }
