--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -46,11 +46,17 @@
 
 @media (max-width: 768px) {
   .navbar {
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    top: 0;
     flex-direction: column;
     gap: 16px;
     align-items: flex-start;
     padding: 16px 20px;
     border-radius: 4px;
+    border-radius: 0px;
+
     input {
       max-width: 334px;
       width: 100%;
